<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ContactFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/brussels_belgium"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:text="@string/info_hilarispublisher_com"
            app:drawableEndCompat="@drawable/ic_baseline_mail_24" />


        <TextView
            android:id="@+id/txtDailUK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/_325_328_0176"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_baseline_call_24" />




    </LinearLayout>


</RelativeLayout>